

#
# Build target options
#

IF (BUILD_GAME)
	ADD_SUBDIRECTORY(game)
ENDIF ()

IF (BUILD_VIEWER)
	ADD_SUBDIRECTORY(model_viewer)
ENDIF ()

IF (BUILD_UTILS)
	ADD_SUBDIRECTORY(format_utils)
ENDIF ()

IF (BUILD_TESTS)
	ADD_SUBDIRECTORY(tests)
ENDIF ()

#
# Windows-related chunk
#

IF(WIN32)
    IF(MSVC)
		IF (OPENSCENEGRAPH_FOUND)
			SET(USERFILE_ENVIRONMENT_DEBUG "PATH=")
			SET(USERFILE_ENVIRONMENT_RELEASE "PATH=")

			IF (EXISTS "${OSG_DIR}/bin")
				SET(OSG_BIN_DIR "${OSG_DIR}/bin" CACHE PATH "Path where to find OpenSceneGraph binaries")
			ELSE (EXISTS "${OSG_DIR}/bin")
				SET (OSG_BIN_DIR CACHE PATH "Path where to find OpenSceneGraph binaries")
			ENDIF(EXISTS "${OSG_DIR}/bin")
            
			SET(USERFILE_ENVIRONMENT_DEBUG "${USERFILE_ENVIRONMENT_DEBUG}${OSG_BIN_DIR}")
			SET(USERFILE_ENVIRONMENT_RELEASE "${USERFILE_ENVIRONMENT_RELEASE}${OSG_BIN_DIR}")
			
			IF (OSG_THIRD_PARTY_DIR)
				SET(USERFILE_ENVIRONMENT_DEBUG "${USERFILE_ENVIRONMENT_DEBUG};${OSG_THIRD_PARTY_DIR}/bin")
				SET(USERFILE_ENVIRONMENT_RELEASE "${USERFILE_ENVIRONMENT_RELEASE};${OSG_THIRD_PARTY_DIR}/bin")
			ELSE (OSG_THIRD_PARTY_DIR)
				MESSAGE("Warning: OpenSceneGraph 3rd Party Directory not found.")
			ENDIF(OSG_THIRD_PARTY_DIR)
		ENDIF (OPENSCENEGRAPH_FOUND)
        
        #IF (BULLET_FOUND)
        #    IF (EXISTS "${BULLET_ROOT}/lib")
		#		SET(BULLET_ROOT "${BULLET_ROOT}/lib" CACHE PATH "Path where to find bullet3 libraries")
        #    ELSE (EXISTS "${BULLET_ROOT}/lib")
        #        SET(BULLET_ROOT CACHE PATH "Path where to find bullet3 libraries")
        #    ENDIF(EXISTS "${BULLET_ROOT}/lib")
        #ENDIF (BULLET_FOUND)
    ENDIF(MSVC)
ENDIF(WIN32)
