ADD_EXECUTABLE(dta dta.cpp)
TARGET_LINK_LIBRARIES(dta ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(cache_bin cache_bin.cpp)
TARGET_LINK_LIBRARIES(cache_bin ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(scene2_bin scene2_bin.cpp)
TARGET_LINK_LIBRARIES(scene2_bin ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
