ADD_EXECUTABLE(dta dta.cpp)
TARGET_LINK_LIBRARIES(dta ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(cache_bin cache_bin.cpp)
TARGET_LINK_LIBRARIES(cache_bin ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(check_bin check_bin.cpp)
TARGET_LINK_LIBRARIES(check_bin ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(scene2_bin scene2_bin.cpp)
TARGET_LINK_LIBRARIES(scene2_bin ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(tree_klz tree_klz.cpp)
TARGET_LINK_LIBRARIES(tree_klz ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(road_bin road_bin.cpp)
TARGET_LINK_LIBRARIES(road_bin ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(menu menu.cpp)
TARGET_LINK_LIBRARIES(menu ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
ADD_EXECUTABLE(textdb textdb.cpp)
TARGET_LINK_LIBRARIES(textdb ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
