ADD_EXECUTABLE(viewer main.cpp)
string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
TARGET_LINK_LIBRARIES(viewer
    ${OPENSCENEGRAPH_LIBRARIES}
    ${OPENTHREADS_LIBRARIES}
    ${OSGPARTICLE_LIBRARIES}
    ${BULLET_LIBRARIES}
    ${OSGUTIL_LIBRARIES}
    ${OSGDB_LIBRARIES}
    ${OSGVIEWER_LIBRARIES}
    ${OSGGA_LIBRARIES}
    ${CMAKE_DL_LIBS}
    ${CMAKE_THREAD_LIBS_INIT}
    ${SDL2_LIBRARIES})
